k8s/k8s-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskmgmt-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taskmgmt
  template:
    metadata:
      labels:
        app: taskmgmt
    spec:
      containers:
        - name: taskmgmt
          image: taskmgmt:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
