k8s/k8s-service.yml
apiVersion: v1
kind: Service
metadata:
  name: taskmgmt-service
  namespace: task
spec:
  type: NodePort 
  selector:
    app: taskmgmt
  ports:
    - protocol: TCP
      port: 8080        # Port exposed inside the cluster
      targetPort: 8080  # Port the pod/container listens on
      nodePort: 31000   # Port exposed on each node (must be within 30000-32767)
